Completed Info section for style.css

--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
     </div>
 
     <div class="hero-image">
-      <img src="images/blue-nudi.jpg" id="heropic" alt="A blue sea slug on the sea floor">
+      <img src="images/blue-nudi-paint.jpg" id="heropic" alt="A blue sea slug on the sea floor">
     </div>
   </div>
 
   <div class="info">
-    <div class="title">This October, we have the dragons.</div>
+    <div class="title">November Dragons</div>
 
     <div class="content">
       <div class="exhibit">
         <img src="images/neon-nudi.jpg" alt="A neon green and orange sea slug among coral">
-        <div class="text">The electric dragon a.k.a. Dorid nudibranch. Special power: Uses toxins made by their prey and release them as a defensive mucus.</div>
+        <p>The electric dragon a.k.a. <i>Dorid nudibranch.</i> Special power: Uses toxins made by their prey and release them as a defensive mucus.</p>
       </div>
 
       <div class="exhibit">
         <img src="images/fire-nudi.png" alt="A sea slug with clusters of bright orangey-red dorsal cerata with luminescent blue tips">
-        <div class="text"> The fire dragon a.k.a. Cratena peregrina. Special power: It targets prey after the prey has hunted, consuming both the prey and its recent meal. This is also known as "kleptopredation."</div>
+        <p> The fire dragon a.k.a. <i>Cratena peregrina.</i> Special power: it targets prey after the prey has hunted, consuming both the prey and its recent meal. This is also known as "kleptopredation."</p>
       </div>
 
       <div class="exhibit">
         <img src="images/ice-nudi.png" alt="A electric blue and yellow sea slug among coral">
-        <div class="text">The blue dragon a.k.a. Glaucus atlanticus. Special power: Stores stinging nematocysts from the siphonophores within its own tissues as defence against predators.</div>
+        <p>The blue dragon a.k.a. <i>Glaucus atlanticus.</i> Special power: stores stinging nematocysts from the siphonophores within its own tissues as defence against predators.</p>
       </div>
     </div>
 
@@ -56,7 +56,7 @@
     <div class="secondary text">Author: John Steinbeck</div>
   </div>
 
-  <div class="CTA">
+  <div class="cta">
     <div class="text">Stay fresh and colourful with the Nudis.</div>
     <div class="secondary text">Sign up for our newsletter now! *wiggles*</div>
     <button type="button">Sign up</button>
