Completed Quote section of style.css

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
   <div class="quote">
     <div class="text">"Orange and speckled and fluted nudibranchs slide gracefully over the rocks, their skirts waving like the dresses of Spanish dancers."</div>
-    <div class="secondary text">Author: John Steinbeck</div>
+    <div class="secondary-text">-John Steinbeck, Author</div>
   </div>
 
   <div class="cta">
     <div class="text">Stay fresh and colourful with the Nudis.</div>
-    <div class="secondary text">Sign up for our newsletter now! *wiggles*</div>
+    <div class="secondary-text">Sign up for our newsletter now! *wiggles*</div>
     <button type="button">Sign up</button>
   </div>
 
