Completed Quote and Footer section for style.css

--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
   </div>
 
   <div class="cta">
-    <div class="text">Stay fresh and colourful with the Nudis.</div>
-    <div class="secondary-text">Sign up for our newsletter now! *wiggles*</div>
-    <button type="button">Sign up</button>
+    <div class="container">
+      <div>
+      <h2>Stay fresh and colourful with the Nudis!</h2>
+      <p>Sign up for our newsletter now@</p>
+      </div>
+      <div><button type="button">Sign up</button>
+      </div>
+    </div>
   </div>
 
   <div class="footer">
-    <div class="text">Copyright © The Odin Project 2021</div>
+    <p>Copyright © The Odin Project 2021</p>
   </div>
 
 
