Edited padding of footer secion in style.css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="content">
       <div class="exhibit">
         <img src="images/neon-nudi.jpg" alt="A neon green and orange sea slug among coral">
-        <p>The electric dragon a.k.a. <i>Dorid nudibranch.</i> Special power: Uses toxins made by their prey and release them as a defensive mucus.</p>
+        <p>The electric dragon a.k.a. <i>Dorid nudibranch.</i> Special power: uses toxins made by their prey and release them as a defensive mucus.</p>
       </div>
 
       <div class="exhibit">
@@ -60,7 +60,7 @@
     <div class="container">
       <div>
       <h2>Stay fresh and colourful with the Nudis!</h2>
-      <p>Sign up for our newsletter now@</p>
+      <p>Sign up for our newsletter now!</p>
       </div>
       <div><button type="button">Sign up</button>
       </div>
